# pyPath

./: .gitignore  README.md  build.bat  build.sh  dir_structure.json  install.sh  pyproject.toml
pyPath/: dirStructure.txt  gui.py  main.py  pathGenerator.py  pathGenerator.spec  pyPath
pyPath/pyPath.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_pathGenerator.py
