[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
name = "pyPath"
dependencies = [
    "pyinstaller",
    "pytest"
]

requires-python = ">=3.8"
authors = [{ name = "Jonas Fenchel", email = "locken.kop97@web.de" }]
description = "toolkit and gui to create paths from json files"
readme = "README.md"


[project.scripts]
pyPath = "pyPath:main_cli"

[tool.pytest.ini_options]
adopts = ["--import-mode=importlib"]
